# st2

./: .gitignore  README.md  TODO.md  b3denv.spec.json  build_mac.sh  build_win.sh  develop.sh  install_and_alias.txt  main.py  pyproject.toml  release.sh  requirements_dev.txt  requirements_lin.txt  requirements_mac.txt  setup.sh  setup_mac.sh  setup_win.sh  upload.sh  website.py
Coldtype/: __init__.py  exporting.py  font.py  importer.py  interpolation.py  metadata.py  operations.py  properties.py  search.py  typesetter.py  util.py
ST2/: __init__.py  exporting.py  font.py  importer.py  interpolation.py  meshtable.py  operations.py  properties.py  search.py  typesetter.py  util.py
b3d/: blender.py  bpy.py  getmesh.py
blends/: 3dtib.blend  blank.blend  example-script.blend  example.blend  keyframed.blend  sequenced.blend
scripts/: blender.py  example.py  getmesh.py  hobeauxborders.py  install.py  rectangle.py  release.py  release.sh
tests/: all_tests.py  common.py  single_test.sh  test_export.py  test_variable_animation_bake_no_timing.py  test_variable_animation_bake_timing.py  test_variable_interpolation.py
