[project]
name = "st2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "b3denv>=0.0.20",
    "coldtype[viewer,website]>=0.12.2",
    "fake-bpy-module-latest>=20260306",
]

[tool.uv.sources]
b3denv = { path = "../b3denv", editable = true }
